fix: tooltip overflow & suggestion style

--- a/css/lights-on.css
+++ b/css/lights-on.css
@@ -3,7 +3,7 @@
  * @Author: Weidows
  * @LastEditors: Weidows
  * @Date: 2022-01-19 14:49:06
- * @LastEditTime: 2024-08-14 17:43:25
+ * @LastEditTime: 2025-04-15 15:29:39
  * @FilePath: \weidows-beautify-pack\css\lights-on.css
  * @Description:
  * @:
@@ -274,9 +274,12 @@
 .monaco-editor .monaco-hover {
   background-color: #262335;
   display: block !important;
-  padding: 20px;
+  /* padding 设置后, 文字会从底部溢出高度不显示 */
+  border-radius: 20px;
+  border: 1px solid #03edf9;
+  box-shadow: 0 0 20px 0 #03edf9;
   transition: opacity 1s !important;
-  opacity: 1;
+  opacity: 0.9 !important;
 
   /* 性能损耗大 */
   /* animation: tooltippulse 4s infinite linear; */
@@ -346,7 +349,7 @@ div.cursor {
   /* border-color: #03edf9; */
   /* box-shadow: 0 0 15px 2px
   #00c3ff; */
-  background: linear-gradient(#03edf9,lime,#fc28a8);
+  background: linear-gradient(#03edf9, lime, #fc28a8);
   border-radius: 2px;
   overflow: visible !important;
 }
@@ -401,4 +404,19 @@ div.sticky-widget {
   --vscode-editorStickyScroll-background: transparent !important;
 
   backdrop-filter: blur(20px) brightness(110%);
+}
+
+/* suggestion tooltip */
+div.suggest-widget {
+  backdrop-filter: blur(20px) brightness(140%);
+  border-radius: 20px;
+  border: 1px solid #03edf9;
+  box-shadow: 0 0 20px 0 #03edf9;
+}
+
+/* suggestion selected item */
+div.suggest-widget .monaco-list .monaco-list-row.focused {
+  background: linear-gradient(rgba(3, 237, 249, 0.6), rgba(252, 40, 168, 0.6));
+  border-radius: 8px;
+  border: 1px solid #fc28a8;
 }
